<resources>
    <string name="app_name">goodHabit</string>
    <string name="title">Title!</string>
    <string name="daily_consumption_label">Daily consumption</string>
    <string name="measurement">measurement</string>

    <string name="button_1">button 1</string>
    <string name="button_2">button 2</string>
    <string name="button_3">button 3</string>
    <string name="button_4">button 4</string>

    <string name="reset">Reset</string>
    <string name="edit">Edit</string>

</resources>