<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasePanelActivity">

    <!--texts layout-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <!--Daily consumption layout-->
        <LinearLayout
            android:id="@+id/panel_base_daily_consumption_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <!--Daily consumption text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_consumption_label"
                android:layout_marginEnd="8dp"/>

            <!--000 text-->
            <TextView
                android:id="@+id/panel_base_daily_consumption_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="000"/>

            <!--"/" text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"/>

            <!--000 text-->
            <TextView
                android:id="@+id/panel_base_daily_consumption_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="000"/>

            <!--measurement text-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measurement"/>

        </LinearLayout>

        <!-- <a> Arc progressbar xml</a> -->
        <com.github.lzyzsd.circleprogress.CircleProgress
            android:id="@+id/circle_progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:circle_progress="50"
            app:circle_max="100"
            app:circle_finished_color="@color/color_circle_finished"
            app:circle_unfinished_color="@color/color_circle_unfinished" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:padding="22dp">

        <!--layouts vertical buttons -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--layout left buttons -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/left_buttons_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="22dp">

                <!--button 1 -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_BTN_1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="1"
                    android:maxLines="1"
                    android:text="@string/button_1"
                    android:backgroundTint="@color/color_button"/>

                <!--button 2-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_BTN_2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="1"
                    android:maxLines="1"
                    android:text="@string/button_2"
                    android:backgroundTint="@color/color_button"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--layout right buttons -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/right_buttons_layout"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <!--button 3-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_BTN_3"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="1"
                    android:maxLines="1"
                    android:text="@string/button_3"
                    android:backgroundTint="@color/color_button"/>

                <!--button 4-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/main_BTN_4"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minLines="1"
                    android:maxLines="1"
                    android:text="@string/button_4"
                    android:backgroundTint="@color/color_button"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--layouts horizontal buttons -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <!--button reset -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_reset"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minLines="1"
                android:maxLines="1"
                android:text="@string/reset"
                android:backgroundTint="@color/color_button"/>

            <!--button edit -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_BTN_edit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minLines="1"
                android:maxLines="1"
                android:text="@string/edit"
                android:backgroundTint="@color/color_button"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>